Add AssemblyAI with Cloudflare Worker integration

--- a/.env.production
+++ b/.env.production
@@ -20,7 +20,7 @@ VITE_PWA_OFFLINE=true
 
 # AssemblyAI Transcription API
 # RECOMMENDED: Use Cloudflare Worker URL (deploy from /cloudflare-worker)
-VITE_ASSEMBLYAI_TOKEN_URL=your_cloudflare_worker_url_here
+VITE_ASSEMBLYAI_TOKEN_URL=https://assemblyai-token-proxy.sudhanshuworkersdev.workers.dev
 
 # Required for tab audio transcription (upload/polling)
-VITE_ASSEMBLYAI_API_KEY=your_production_api_key_here
+VITE_ASSEMBLYAI_API_KEY=280c7c34848244f49685334de75a94b2
